Change home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-test yo quelqu'un m'entend?
+bonjour ci dessous vous trouverez mes traductions maison de jeux que j'ai bien aimé
+
+<a href="/wbwwb"> we become what we behold (Nicky Case, 2019) </a>
+<a href="/unmanned"> unmanned (Molleindustria, 2015) </a>
