Change banner text

--- a/unmanned/index.html
+++ b/unmanned/index.html
@@ -7,12 +7,12 @@
 
     <meta
       name="description"
-      content="Jouez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger pendant la journée et qui retrouve sa famille en banlieue le soir. Dans Unmanned, le conflit est intérieur - le seul sang que vous verserez sera celui des coupures de rasage. Mais y a-t-il des dommages collatéraux dans cette nouvelle façon de faire la guerre ?" />
+      content="Endossez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger de 9 à 5 et qui retrouve sa famille en banlieue le soir. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous verserez sera le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux ?" />
 
     <meta property="og:title" content="Unmanned" />
     <meta
       property="og:description"
-      content="Jouez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger pendant la journée et qui retrouve sa famille en banlieue le soir. Dans Unmanned, le conflit est intérieur - le seul sang que vous verserez sera celui des coupures de rasage. Mais y a-t-il des dommages collatéraux dans cette nouvelle façon de faire la guerre ?" />
+      content="Endossez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger de 9 à 5 et qui retrouve sa famille en banlieue le soir. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous verserez sera le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux ?" />
 
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -155,8 +155,7 @@
         -->
       <div>
         <p>
-          Endossez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger pendant la journée et qui retrouve sa famille en banlieue le soir. Dans Unmanned, le conflit est intérieur - le seul
-          sang que vous verserez est celui des coupures de rasage. Mais cette nouvelle façon de faire la guerre cause-t-elle des dégâts collatéraux?
+          Endossez le rôle du tout nouveau genre de soldat : celui qui largue des bombes à distance sur un sol étranger de 9 à 5 et qui retrouve sa famille en banlieue le soir. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous verserez sera le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux ?
         </p>
         <p>
           <em>Se joue avec une souris</em>
@@ -173,17 +172,17 @@
         Musique Originale:
         <a href="http://jts3k.com/" target="_blank">Jesse Stiles</a>. <br />
         <br />
-        Additional musicians in <em>Fried Chicken</em>: <br />
-        Electric guitar:<strong> John King</strong>.<br />
-        Cello: <strong>Audrey Riley</strong>.<br />
-        Lyrics: <strong>Queen</strong>. <br />
+        Musiciens additionnels dans <em>Fried Chicken</em>: <br />
+        Guitare électrique:<strong> John King</strong>.<br />
+        Violon: <strong>Audrey Riley</strong>.<br />
+        Paroles: <strong>Queen</strong>. <br />
         <br />
 
         Traduction:
         <a href="https://shh.ovh" target="_new">Samuel Hackwill</a><br />
       </p>
       <p>
-        Unmanned is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">Creative Commons License</a>. <a href="http://www.molleindustria.org/" target="_blank">Molleindustria</a> 2012.<br />
+        Unmanned est sous <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">License Creative Commons</a>. <a href="http://www.molleindustria.org/" target="_blank">Molleindustria</a> 2012.<br />
         <br />
         <br />
       </p>
