--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 bonjour ci dessous vous trouverez mes traductions maison de jeux que j'ai bien aimé
 
-<a href="/wbwwb"> we become what we behold (Nicky Case, 2019) </a>
-<a href="/unmanned"> unmanned (Molleindustria, 2015) </a>
+<div>
+	<a href="/wbwwb"> we become what we behold (Nicky Case, 2019) </a>
+</div>
+
+<div>
+
+	<a href="/unmanned"> unmanned (Molleindustria, 2015) </a>
+</div>
