--- a/unmanned/index.html
+++ b/unmanned/index.html
@@ -7,12 +7,12 @@
 
     <meta
       name="description"
-      content="Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers à distance de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux?" />
+      content="Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le vôtre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas un nouveau type de dommage collatéraux?" />
 
     <meta property="og:title" content="Unmanned" />
     <meta
       property="og:description"
-      content="Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers à distance de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux?" />
+      content="Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le vôtre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas un nouveau type de dommage collatéraux?" />
 
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -155,7 +155,7 @@
         -->
       <div>
         <p>
-          Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers à distance de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le votre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas d'autres dommages collatéraux?
+          Endossez le rôle du tout nouveau genre de soldat : celui qui bombarde des sols étrangers de 9 à 17 et retrouve sa famille en banlieue tous les soirs. Dans Unmanned, il n'y a que des conflits intérieurs - le seul sang que vous versez est le vôtre, en vous rasant. Mais cette nouvelle façon de faire la guerre n'implique-t-elle pas un nouveau type de dommage collatéral?
         </p>
         <p>
           <em>Se joue avec une souris</em>
