--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-bonjour ci dessous vous trouverez mes traductions maison de jeux que j'ai bien aimé
+<!-- bonjour ci dessous vous trouverez mes traductions maison de jeux que j'ai bien aimé
 
 <div>
 	<a href="/wbwwb"> we become what we behold (Nicky Case, 2019) </a>
@@ -7,4 +7,4 @@ bonjour ci dessous vous trouverez mes traductions maison de jeux que j'ai bien a
 <div>
 
 	<a href="/unmanned"> unmanned (Molleindustria, 2015) </a>
-</div>
+</div> -->
